# CodeNovSU

./: .gitignore  README.md
backend/: README.md
backend/api/: .env.example  README.md  pyproject.toml
backend/api/app/: __init__.py  main.py
backend/api/app/api/: deps.py  router.py
backend/api/app/api/routes/: ai.py  auth.py  career_test.py  health.py  lessons.py  progress.py  tasks.py  tracks.py
backend/api/app/core/: config.py  errors.py  security.py
backend/api/app/db/: base.py  session.py
backend/api/app/models/: __init__.py  content.py  enums.py  learning.py  user.py
backend/api/app/schemas/: ai.py  auth.py  career_test.py  content.py  progress.py  track.py
backend/api/app/services/: ai_hints.py
backend/api/scripts/: __init__.py  bootstrap_learning_content.py
content/curriculum/: README.md
content/curriculum/tracks/: ai-specialist.md  cpp.md  cybersecurity.md  data-analysis.md  javascript.md  (+1 more)
database/: README.md
database/migrations/: 001_init.sql
database/seeds/: 001_tracks.sql  002_cpp_starter_content.sql  003_full_curriculum.sql
docs/: admin.html  app.js  architecture.md  career.html  community.html  course.html  cpp.html  data-model.md  how-we-teach.html  repository-structure.md  roadmap.md  task.html  technical-spec.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/lib/: auth-api.ts  auth-types.ts  career-test.ts  config.ts  curriculum-catalog.ts  local-gamification.ts  mock-data.ts  progress-store.ts  progress-utils.ts  types.ts
(+44 files in other folders)
