[project]
name = "codenovsu-api"
version = "0.1.0"
description = "Backend API for the CodeNovsu learning platform."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "pydantic-settings>=2.2,<3.0",
  "email-validator>=2.2,<3.0",
  "PyJWT>=2.9,<3.0",
  "argon2-cffi>=25.1,<26.0",
  "pwdlib>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
